syntax = "proto3";

option csharp_namespace = "GrpcCoreDemo.Grpc";

service Greeter {
	rpc SayHello (HelloRequest) returns (HelloResponse) {}
	rpc SubscribeToGreetingNotifications (SubscribeToGreetingNotificationsRequest) returns (stream GreetingNotification);
}

message HelloRequest {
	string name = 1;
}

message HelloResponse {
	string message = 1;
	string emptyString = 2;
	string nullString = 3;
	repeated int32 emptyCollection = 4;
	repeated int32 nullCollection = 5;
}

message SubscribeToGreetingNotificationsRequest {
}

message GreetingNotification {
	string name = 1;
}
